--- a/src/pages/courses/courses.scss
+++ b/src/pages/courses/courses.scss
@@ -1,7 +1,7 @@
 page-courses {
     .back {
         //background-color:transparent;
-        background-image: url('CS2/src/assets/imgs/back.png') !important;
+        background-image: url('../assets/imgs/back.png') !important;
         
 }
 .toolbar-title-md {
