--- a/src/pages/grades/grades.scss
+++ b/src/pages/grades/grades.scss
@@ -1,7 +1,7 @@
 page-grades {
     .back {
-        background-color:transparent;
-        background-image: url('../assets/imgs/Untitled design.png') !important;
+        //background-color:transparent;
+        background-image: url('../assets/imgs/back.png') !important;
         
 }
 .toolbar-title-md {
