--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -2,7 +2,7 @@ page-login {
 
     .back {
         background-color:transparent;
-        background-image: url('../assets/imgs/Untitled design.png') !important;
+        background-image: url('../assets/imgs/back.png') !important;
         
 }
 .input{
