--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,7 +1,7 @@
 page-profile {
     .back {
-        background-color:transparent;
-        background-image: url('../assets/imgs/Untitled design.png') !important;
+        //background-color:transparent;
+        background-image: url('../assets/imgs/back.png') !important;
         
 }
 .toolbar-title-md {
