--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,7 +1,7 @@
 page-profile {
     .back {
        // background-color:transparent;
-        background-image: url('../assets/imgs/logn.png') !important;
+        background-image: url('../assets/imgs/back.png') !important;
         
 }
 .toolbar-title-md {
@@ -41,5 +41,10 @@ page-profile {
      border: medium none;
      border-radius: 5px;
      color: #000000;
+ }
+ .item-md p {
+     color: black;
+     text-align: center;
+     font-weight: 900;
  }
 }
