--- a/src/pages/doctors/doctors.scss
+++ b/src/pages/doctors/doctors.scss
@@ -1,3 +1,72 @@
 page-doctors {
-
+    .back {
+        // background-color:transparent;
+         background-image: url('../assets/imgs/back.png') !important;
+         
+ }
+ .toolbar-title-md {
+     text-align: center;
+     font-size: 25px;
+     font-family: cursive ;
+     color: rgb(8, 8, 8) !important;
+   } 
+ 
+   
+  
+  .image{
+     margin: auto;
+     height: 100px; 
+     width: 100px; 
+   // border: 2px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 5px gray;
+    display: block;
+    background-color: transparent;
+    
+  }
+ 
+  ion-card.card{
+      box-shadow: none;
+      background: rgba(0,0,0,0.5);
+      border-radius: 5px;
+     
+  }
+  .list > .item-block:first-child{
+      border: medium none;
+  }
+  .item{
+      margin-bottom: 10px;
+      font-size: medium;
+      background:rgba(255,255,255,0.5);
+      border: medium none;
+      border-radius: 5px;
+      color: #000000;
+  }
+  .item-md p {
+      color: black;
+      text-align: center;
+      font-weight: 900;
+  }
+  .button{
+    color: whitesmoke;
+    border: none; 
+    font-size: 14px;
+    font-family:cursive ;
+    display:block;
+    margin: 0 auto;
+    background-color: black;
+  }
+  .ion-md-paper:before {
+    content: "\f33f";
+    margin-left: 10px;
+    margin-right: 10px;
+    size: ledger;
 }
+.ion-md-calendar:before {
+    content: "\f2ab";
+    margin-left: 10px;
+    margin-right: 10px;
+    size: ledger;
+}
+ }
+
